# emacs-rime

./: .gitignore  CMakeLists.txt  Makefile  lib.c  test.el
libs/: CMakeLists.txt
libs/emacs/: CMakeLists.txt
libs/librime/: CMakeLists.txt
